# venDerechA

./: AssignCommand.cpp  AssignCommand.h  BinaryExpression.cpp  BinaryExpression.h  BindCommand.cpp  BindCommand.h  CMakeLists.txt  ClientWriter.cpp  ClientWriter.h  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionCommand.cpp  ConditionCommand.h  ConnectCommand.cpp  ConnectCommand.h  Div.cpp  Div.h  Expression.h  IfCommand.cpp  IfCommand.h  LexParse.cpp  LexParse.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Number.cpp  Number.h  OpenDataReader.cpp  OpenDataReader.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  Shunting.cpp  Shunting.h  SleepCommand.cpp  (+10 more)
